# segretino

./: README.md  bun.lockb  database.types.ts  diagramma-ER.drawio  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: main.yml
public/: splashscreen.html
src/: App.tsx  main.tsx  output.css  setup-vitest.ts  styles-input.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/HOCS/: withTransitionAnimation.tsx
src/__mocks__/: zustand.ts
src/components/: ChatBtn.tsx  TitleBar.tsx
src/components/Avatar/: Avatar.tsx  index.tsx
src/components/SideBarBtn/: ChatBtn.tsx  Home.tsx  addChatBtn.tsx
src/hooks/: useSubscribeTomessages.ts
src/integration/: check.test.tsx
src/routes/: Chats.tsx  ErrorPage.tsx  LoginPage.tsx  Root.tsx  rootLoader.ts
src/routes/Chat/: ChatTyping.tsx  ChtBubble.tsx  NavBar.tsx  index.tsx
src/routes/Chats/: index.tsx
src/routes/HomePage/: index.tsx
src/routes/Profile/: Content.tsx  index.tsx
src/store/: createselectors.ts  index.ts
src/types/: supabase.ts
src/utils/: channels.ts  crypto.ts  genericutils.ts  supabase.ts
supabase/: config.toml
supabase/functions/: utils.ts
supabase/functions/generete-keys/: index.ts
supabase/functions/get-user/: index.ts
supabase/functions/get-user-by-id/: index.ts
webdriver/webdriverio/: package-lock.json  package.json  wdio.conf.js
webdriver/webdriverio/test/: example.e2e.ts
